--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -17,9 +17,12 @@
     <button id="start-button">StartGame</button>
     <p>Use the left and right arrow to control the car!</p>
     <img src="./images/arrows.png" alt="" class="arrows-img">
+    <div id="scoreDiv">
+      Score: <span id="score"> 0 </span>
+    </div>
   </div>
   <div id="game-board">
-
+    <canvas id="theCanvas" width="500" height="600">
   </div>
 </body>
 </html>
