--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -18,7 +18,7 @@
     <p>Use the left and right arrow to control the car!</p>
     <img src="./images/arrows.png" alt="" class="arrows-img">
     <div id="scoreDiv">
-      Score: <span id="score"> 0 </span>
+      <p> Score: <span id="score"> 0 </span> </p>
     </div>
   </div>
   <div id="game-board">
